<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">
    <TextView
        android:id="@+id/tv_pausing_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:textSize="24sp"
        android:text="@string/title_stereoscope" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"

        android:layout_above="@id/tv_pausing_welcome"
        android:textSize="35sp"
        android:layout_marginBottom="20dp"
        android:text="@string/welcome_overall_title"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_pausing_welcome"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textSize="16sp"
        android:text="@string/pause_tip" />
</RelativeLayout>