<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:id="@+id/rl_main_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:paddingBottom="20dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="5dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/step_img"
                    android:layout_width="wrap_content"
                    android:layout_height="320dp"
                    android:layout_centerHorizontal="true"
                    android:scaleType="fitCenter"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/tv_num"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:background="@color/theme_font_color"
                    android:textColor="@color/white"
                    android:layout_toLeftOf="@+id/tips_txt"
                    android:layout_alignTop="@+id/tips_txt"
                    android:layout_alignBottom="@+id/tips_txt"
                    android:gravity="center"
                    />

                <TextView
                    android:id="@+id/tips_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/step_img"
                    android:layout_marginTop="30dp"
                    android:layout_centerHorizontal="true"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:paddingBottom="6dp"
                    />


                <TextView
                    android:id="@+id/select_txt_size"
                    android:layout_width="220dp"
                    android:layout_height="36dp"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@+id/tips_txt"
                    android:text="@string/click_choose"
                    android:gravity="center"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/shape_finish_btn"
                    android:textColor="@color/maincolor"
                    android:visibility="gone"
                    android:textSize="16sp" />
                <RadioGroup
                    android:id="@+id/prepare_rg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tips_txt"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="4dp"
                    android:visibility="gone">
                    <RadioButton
                        android:id="@+id/prepare_rb1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/num" />
                    <RadioButton
                        android:id="@+id/prepare_rb2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/zimu" />
                    <RadioButton
                        android:id="@+id/prepare_rb3"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/aritcle" />
                </RadioGroup>
                <LinearLayout
                    android:id="@+id/level_linearlayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/tips_txt"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical"
                    android:visibility="gone">
                    <TextView
                        android:id="@+id/left_level"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:layout_marginRight="30dp"
                        android:layout_weight="1"
                        android:focusable="true"
                        android:gravity="center"
                        android:padding="3dp"
                        android:text="@string/left_eye"></TextView>
                    <TextView
                        android:id="@+id/right_level"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:layout_marginRight="30dp"
                        android:layout_marginTop="30dp"
                        android:layout_weight="1"
                        android:focusable="true"
                        android:gravity="center"
                        android:padding="3dp"
                        android:text="@string/right_eye"></TextView>
                </LinearLayout>
                <Button
                    android:id="@+id/select_book_btn"
                    android:layout_width="180dp"
                    android:layout_height="34dp"
                    android:layout_below="@+id/prepare_rg"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/selector_login_button"
                    android:text="@string/choose_train_content"
                    android:textColor="@color/white"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/btn_select_user_content"
                    android:layout_width="wrap_content"
                    android:layout_height="34dp"
                    android:layout_below="@+id/select_book_btn"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/selector_login_button"
                    android:text="@string/select_user_content"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:textColor="@color/white"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/train_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/btn_select_user_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/train_content"
                    android:textColor="@color/maincolor"
                    android:textSize="16sp"
                    android:textStyle="italic"
                    android:visibility="gone" />
                <Button
                    android:id="@+id/start_train_btn"
                    android:layout_width="180dp"
                    android:layout_height="34dp"
                    android:layout_below="@+id/train_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/dotted_line_bg"
                    android:text="@string/start_training"
                    android:textColor="@color/theme_font_color"
                    android:visibility="gone" />
            </RelativeLayout>
        </ScrollView>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/rl_popup_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">
        <com.uyu.device.devicetraining.presentation.view.widget.TrainDeskView
            android:id="@+id/trainDeskView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone">
        </com.uyu.device.devicetraining.presentation.view.widget.TrainDeskView>
        <com.uyu.device.devicetraining.presentation.view.adapter.selfhelp.SelectContentView
            android:id="@+id/selectContentView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone">
        </com.uyu.device.devicetraining.presentation.view.adapter.selfhelp.SelectContentView>
    </RelativeLayout>
</RelativeLayout>


