<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include layout="@layout/item_welcome_layout"
        android:id="@+id/ll_welcome_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </include>
    <include layout="@layout/item_pause_layout"
        android:id="@+id/ll_pausing_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </include>

    <RelativeLayout
        android:id="@+id/ll_preparing_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="visible">

        <TextView
            android:id="@+id/tv_preparing_welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textSize="24sp"
            android:text="@string/title_train" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_above="@id/tv_preparing_welcome"
            android:textSize="35sp"
            android:layout_marginBottom="20dp"
            android:text="@string/welcome_overall_title"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_preparing_welcome"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:textSize="16sp"
            android:text="@string/prepare_tip"/>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ll_training_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="visible">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <com.uyu.device.devicetraining.presentation.view.widget.FusionPicLevel
                android:id="@+id/iv_train_pic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true" />
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>
